--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,14 @@ services:
   - type: web
     name: redsta
     env: python
-    buildCommand: ""
-    startCommand: python app.py
+    buildCommand: ./build.sh && pip install -r requirements.txt
+    startCommand: gunicorn app:app
+    envVars:
+      - key: REDDIT_CLIENT_ID
+        value: x0-s9IIq4QznA0UxhdjK2w
+      - key: REDDIT_CLIENT_SECRET
+        value: lz3V0wcKvIlr1m0fxmhvNzhZKrQvmg
+    autoDeploy: true
+    region: oregon
+    branch: main
+
