--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: redsta
     env: python
-    buildCommand: ./build.sh && pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    buildCommand: ./build.sh 
+    startCommand: ./venv/bin/gunicorn app:app
     envVars:
       - key: REDDIT_CLIENT_ID
         value: x0-s9IIq4QznA0UxhdjK2w
