💡 Final render setup: Python 3.11 + working gunicorn

--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: redsta
     env: python
+    plan: free
     buildCommand: ./build.sh 
     startCommand: ./venv/bin/gunicorn app:app
     envVars:
